# libffi

./: .gitignore  CMakeLists.txt  configure_options.cmake  configure_platform.cmake
src/: closures.c  dlmalloc.c
